--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1171,3 +1171,14 @@ pages = {1-94},
 author = {Jelena Kovačević and Amina Chebira},
 url = {infoscience.epfl.ch/record/133268/files/08_KovacevicC_F%26T.pdf}
 }
+
+@article{musicsepintro1,
+author = {Rafii, Zafar and Liutkus, Antoine and Stoter, Fabian-Robert and Mimilakis, Stylianos and Fitzgerald, Derry and Pardo, Bryan},
+year = {2018},
+month = {04},
+pages = {1-1},
+title = {An Overview of Lead and Accompaniment Separation in Music},
+volume = {PP},
+journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+doi = {10.1109/TASLP.2018.2825440}
+}
