--- a/latex/mdx_townhall_aug21.tex
+++ b/latex/mdx_townhall_aug21.tex
@@ -226,7 +226,7 @@
 	\item
 	 ``It is definitely a great environment to push the limit, had it been for a paper, I would have stopped sooner.'' -- defossez
 	 \item
-		 There was a lot of active discussion on the board (I got help wherever I needed it) and everything felt set up for participants to succeed
+		 There was a lot of active discussion on the board and everything felt set up for participants to succeed
 	 \item
 		 GitLab submission process worked well, submissions were easy, and the containers had important Python libraries already installed
 	 \item
