--- a/latex/ch1_introduction.tex
+++ b/latex/ch1_introduction.tex
@@ -66,7 +66,7 @@ Other music demixing systems have been proposed that use the CQT instead of the 
 
 Additionally, there are papers that describe frequency-warped transforms, with an interest in using nonlinear musical or auditory frequency scales for specific applications (\cite{warped1, warped2, earlywarped1, earlywarped2, warpedcomparison, warpedpsycho}). The NSGT and sliCQ transform, with their support for arbitrary frequency scales with perfect invertibility, is therefore of interest as the best implementation choice for these various frequency warping schemes, and as a general platform for frequency analysis of audio with nonlinear frequency scales. Finally, the NSGT and sliCQ transforms have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python\footnote{\url{https://github.com/grrrr/nsgt}}, allowing for reproducibility and further research.
 
-In this thesis, \textcite{umx}'s deep neural network for music demixing, which is based on the STFT, will be considered as the starting point. It is chosen for being fully open-source\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further research. The objective of this thesis is to adapt Open-Unmix to use the sliCQ transform instead of the STFT. The goal is to present a working music demixing application with the sliCQ transform as a starting point for future systems that can benefit from application-specific frequency scales, without needing to write custom frequency warping schemes or being constrained in time-frequency resolution by a single STFT window size.
+In this thesis, \textcite{umx}'s deep neural network for music demixing, which is based on the STFT, will be considered as the starting point. It is chosen for being fully open-source\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further research. The objective of this thesis is to adapt Open-Unmix to use the sliCQ transform instead of the STFT. The goal is to present a working music demixing application with the sliCQ transform as a starting point for future systems that can benefit from application-specific and optimal time-frequency resolution, without needing to write custom frequency warping schemes or being constrained by the fixed-resolution STFT.
 
 \subsection{Contribution and results}
 
