--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -185,7 +185,6 @@ url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
 url = {https://www.univie.ac.at/nonstatgab/pdf_files/dohogrve11_amsart.pdf},
 author = {Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Grill, Thomas},
 year = {2011},
-pages = {},
 title = {Constructing an invertible constant-Q transform with nonstationary Gabor frames},
 journal = {Proceedings of the 14th International Conference on Digital Audio Effects, DAFx 2011}
 }
@@ -217,7 +216,6 @@ doi = {10.25080/Majora-7b98e3ed-003}
 @article{musicsepgood,
 author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
 year = {2018},
-pages = {},
 title = {Musical Source Separation: An Introduction},
 volume = {36},
 journal = {IEEE Signal Processing Magazine},
@@ -402,7 +400,6 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
 @article{musicmask,
 author = {Liu, Ruolun and Li, Suping},
 year = {2009},
-pages = {},
 title = {A review on music source separation},
 journal = {Proceedings - 2009 IEEE Youth Conference on Information, Computing and Telecommunication, YC-ICT2009},
 doi = {10.1109/YCICT.2009.5382353}
@@ -455,7 +452,6 @@ journal = {Siam Review}
 @phdthesis{doerflerphd,
 author = {D{\"o}rfler, Monika},
 year = {2002},
-pages = {},
 title = {Gabor analysis for a class of signals called music},
 url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
 }
@@ -463,7 +459,6 @@ url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
 @article{psycho1,
 author = {Oppenheim, Jacob and Magnasco, Marcelo},
 year = {2012},
-pages = {},
 title = {Human Time-Frequency Acuity Beats the Fourier Uncertainty Principle},
 volume = {110},
 journal = {Physical Review Letters},
@@ -495,7 +490,6 @@ pages = {336--338},
 @article{stftinvertible,
 author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, R},
 year = {2002},
-pages = {},
 title = {Spectrum and spectral density estimation by the Discrete Fourier transform (DFT), including a comprehensive list of window functions and some new flat-top windows},
 volume = {12},
 journal = {Max Plank Inst}
@@ -504,7 +498,6 @@ journal = {Max Plank Inst}
 @article{adaptivecqt,
 author = {Liuni, Marco and Roebel, Axel and Matusiak, Ewa and Romito, Marco and Rodet, Xavier},
 year = {2013},
-pages = {},
 title = {Automatic Adaptation of the Time-Frequency Resolution for Sound Analysis and Re-Synthesis},
 volume = {21},
 journal = {IEEE Transactions on Audio Speech and Language Processing},
@@ -538,7 +531,6 @@ title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks
 @misc{driedger,
 author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
 year = {2014},
-pages = {},
 title = {Extending Harmonic-Percussive Separation of Audio Signals},
 url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
 }
@@ -553,7 +545,6 @@ url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01
 @article{sparsitykowalski,
 author = {Kowalski, Matthieu and Torrésani, Bruno},
 year = {2009},
-pages = {},
 title = {Sparsity and persistence: Mixed norms provide simple signal models with dependent coefficients},
 volume = {3},
 journal = {Signal Image and Video Processing},
@@ -563,7 +554,6 @@ doi = {10.1007/s11760-008-0076-1}
 @article{sparsitykowalski2,
 author = {Kowalski, Matthieu and Torrésani, Bruno},
 year = {2009},
-pages = {},
 title = {Structured Sparsity: from Mixed Norms to Structured Shrinkage},
 volume = {53},
 journal = {SPARS09-Signal Processing with Adaptive Sparse Structured Representations}}
@@ -593,7 +583,6 @@ booktitle = {Proceedings of the AES International Conference}
 @inproceedings{cqtseparation,
 author = {Shi, Ziqiang and Lin, Huibin and Liu, Liu and Liu, Rujie and Han, Jiqing},
 year = {2019},
-pages = {},
 title = {Is CQT more suitable for monaural speech separation than STFT? an empirical study},
 }
 
@@ -644,7 +633,6 @@ journal={Journal of the Audio Engineering Society},
 @article{bettertfres2,
 author = {Nisar, Shibli and Khan, Omar and Tariq, Muhammad},
 year = {2016},
-month = {01},
 pages = {1-13},
 title = {An Efficient Adaptive Window Size Selection Method for Improving Spectrogram Visualization},
 volume = {2016},
@@ -673,8 +661,7 @@ doi = {10.1155/2016/6172453}
                   Juan Pablo Bello},
   title        = {{MedleyDB Audio: A Dataset of Multitrack Audio for 
                    Music Research}},
-  month        = oct,
-  year         = 2014,
+  year         = {2014},
   publisher    = {Zenodo},
   version      = {1.0},
   doi          = {10.5281/zenodo.1649325},
@@ -804,8 +791,7 @@ author={
 @misc{tensorflowsoft,
   author       = {TensorFlow Developers},
   title        = {TensorFlow},
-  month        = aug,
-  year         = 2021,
+  year         = {2021},
   note         = {{Specific TensorFlow versions can be found in the 
                    "Versions" list on the right side of this
                    page.<br>See the full list of authors <a href="htt
@@ -909,8 +895,6 @@ url = {https://hal.inria.fr/hal-01472932/document}
 @article{tfjigsaw,
 author = {Jaillet, Florent and Torrésani, Bruno},
 year = {2007},
-month = {03},
-pages = {},
 title = {Time-Frequency Jigsaw Puzzle: adaptive multiwindow and multilayered Gabor expansions},
 volume = {05},
 journal = {International Journal of Wavelets, Multiresolution and Information Processing},
@@ -932,8 +916,6 @@ url={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7389485}
 @article{fouriermusic,
 author = {Lostanlen, Vincent and Andén, Joakim and Lagrange, Mathieu},
 year = {2019},
-month = {09},
-pages = {},
 title = {Fourier at the heart of computer music: From harmonic sounds to texture},
 volume = {20},
 journal = {Comptes Rendus Physique},
@@ -966,12 +948,9 @@ publisher = {Chez Firmin Didot, Père et Fils},
 @inproceedings{wmdct,
 author = {Siedenburg, Kai and Doerfler, Monika},
 year = {2011},
-month = {01},
-pages = {},
 title = {Structured sparsity for audio signals},
 booktitle = {Proc. of the 14th International Conference on Digital Audio Effects (DAFx-11), Paris, France}
 }
-
 
 @article{gausshist,
 author = {Heideman, Michael and Johnson, Don and Burrus, Charles},
@@ -997,7 +976,6 @@ doi = {10.1007/BF00348431}
 @article{ffttopten,
 author = {Dongarra, Jack and Sullivan, Francis},
 year = {2000},
-month = {01},
 title = {Top ten algorithms of the century},
 journal = {Computing in Science and Engineering - C in S\&E}
 }
@@ -1011,7 +989,6 @@ pages = {3624--3632},
 publisher = {OSA},
 title = {Gabor: frequency, time, and memory},
 volume = {21},
-month = {10},
 year = {1982},
 url = {http://ao.osa.org/abstract.cfm?URI=ao-21-20-3624},
 doi = {10.1364/AO.21.003624},
@@ -1032,12 +1009,10 @@ doi={10.1109/JPROC.1996.503148}
 @inproceedings{homage1,
 author = {Hill, Peter},
 year = {2007},
-month = {10},
 pages = {2632--2637},
 title = {Dennis Gabor - Contributions to Communication Theory \ Signal Processing},
 journal = {EUROCON 2007 - The International Conference on Computer as a Tool},
 doi = {10.1109/EURCON.2007.4400546}}
-
 
 @article{stftindie,
 	author={J. B. {Allen} and L. R. {Rabiner}},
@@ -1075,15 +1050,12 @@ doi = {10.1109/EURCON.2007.4400546}}
 @article{gabor2,
 author = {Maclennan, Bruce},
 year = {1994},
-month = {11},
 title = {Gabor Representations of Spatiotemporal Visual Images},
 url = {http://www.its.caltech.edu/~matilde/GaborLocalization.pdf}}
-
 
 @article{doerflersouls,
 author = {Evangelista, Gianpaolo and Doerfler, Monika and Matusiak, Ewa},
 year = {2013},
-month = {08},
 title = {Arbitrary Phase Vocoders by means of Warping},
 volume = {7},
 journal = {Musica e Tecnologia},
@@ -1093,7 +1065,6 @@ doi = {10.13128/Music_Tec-13210}
 @article{msp,
 author = {Brown, Judith and Puckette, Miller},
 year = {1992},
-month = {11},
 pages = {2698},
 title = {"An efficient algorithm for the calculation of a constant Q transform"},
 volume = {92},
@@ -1113,7 +1084,6 @@ doi = {10.1121/1.404385}
 @article{westernpitch2,
 author = {Jacoby, Nori and Undurraga, Eduardo and Mcpherson, Malinda and Valdés, Joaquín and Ossandon, Tomas and McDermott, Josh},
 year = {2019},
-month = {09},
 title = {Universal and Non-universal Features of Musical Pitch Perception Revealed by Singing},
 volume = {29},
 journal = {Current Biology},
@@ -1150,7 +1120,6 @@ series = {MM '13}
 @inbook{frametheory,
 author = {Balazs, Peter and Holighaus, Nicki and Necciari, Thibaud and Stoeva, Diana},
 year = {2017},
-month = {06},
 pages = {225-268},
 title = {Frame Theory for Signal Processing in Psychoacoustics},
 isbn = {978-3-319-54710-7},
@@ -1175,10 +1144,87 @@ url = {infoscience.epfl.ch/record/133268/files/08_KovacevicC_F%26T.pdf}
 @article{musicsepintro1,
 author = {Rafii, Zafar and Liutkus, Antoine and Stoter, Fabian-Robert and Mimilakis, Stylianos and Fitzgerald, Derry and Pardo, Bryan},
 year = {2018},
-month = {04},
 pages = {1-1},
 title = {An Overview of Lead and Accompaniment Separation in Music},
 volume = {PP},
 journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
 doi = {10.1109/TASLP.2018.2825440}
+}
+
+@book{blind1,
+author = {Comon, Pierre and Jutten, Christian},
+year = {2010},
+publisher = {Academic Press},
+title = {Handbook of Blind Source Separation, Independent Component Analysis and Applications},
+isbn = {9780123747266},
+doi = {10.1016/C2009-0-19334-0},
+url = {http://www.gipsa-lab.grenoble-inp.fr/~pierre.comon/FichiersPdf/HandBook.pdf}
+}
+
+@book{blind2,
+author = {Naik, G. R. and Wang, W.},
+year = {2014},
+publisher = {Springer-Verlag Berlin Heidelberg},
+title = {Blind Source Separation},
+isbn = {9783642550164}
+}
+
+@article{ica1,
+author={Hyvarinen, A.},
+journal={IEEE Transactions on Neural Networks},
+title={Fast and robust fixed-point algorithms for independent component analysis},
+year={1999},
+volume={10},
+number={3},
+pages={626-634},
+doi={10.1109/72.761722}}
+
+@article{ica2,
+author = {Hyvärinen, A and Oja, Erkki},
+year = {2000},
+pages = {411-30},
+title = {Oja, E.: Independent Component Analysis: Algorithms and Applications. Neural Networks 13(4-5), 411-430},
+volume = {13},
+journal = {Neural networks : the official journal of the International Neural Network Society},
+doi = {10.1016/S0893-6080(00)00026-5}
+}
+
+@book{speechsep,
+author = {Loizou, Philopos C.},
+year = {2013},
+publisher = {CRC Press },
+title = {Speech Enhancement: Theory and Practice},
+isbn = {9781138075573}
+}
+
+@inproceedings{musicseptechniques1,
+author={Liutkus, Antoine and Durrieu, Jean-Louis and Daudet, Laurent and Richard, Gaël},
+booktitle={14th International Workshop on Image Analysis for Multimedia Interactive Services (WIAMIS)},
+title={An overview of informed audio source separation},
+year={2013},
+pages={1-4},
+doi={10.1109/WIAMIS.2013.6616139},
+url={https://hal.archives-ouvertes.fr/hal-00958661/document}}
+
+@article{musicseptechniques2,
+author={Vincent, Emmanuel and Bertin, Nancy and Gribonval, Remi and Bimbot, Frederic},
+journal={IEEE Signal Processing Magazine},
+title={From Blind to Guided Audio Source Separation: How models and side information can improve the separation of sound},
+year={2014},
+volume={31},
+number={3},
+pages={107-115},
+doi={10.1109/MSP.2013.2297440},
+url={https://hal.inria.fr/hal-00922378/document}
+}
+
+@inproceedings{nmfpaper,
+ author = {Lee, Daniel and Seung, H. Sebastian},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {T. Leen and T. Dietterich and V. Tresp},
+ publisher = {MIT Press},
+ title = {Algorithms for Non-negative Matrix Factorization},
+ url = {https://proceedings.neurips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf},
+ volume = {13},
+ year = {2001}
 }
